--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="css/style.css">
-      <title>Maré de Sorte</title>
+      <title>Maré de Sorte - Página Inicial</title>
   </head>
   <body>
       <header>
-        <h1 id="header-title" >Maré de Sorte</h1>
+        <h1 id="header-title">Maré de Sorte</h1>
         <img src="figs/wtr.png" alt="logo" width="10" height="12">
       </header>
       <nav>
@@ -16,7 +16,9 @@
         <a href="form.html" title="Participar" class="nav-links">Participar</a> 
       </nav>
       <section>
-        <h2 class="section-title">O QUE SÃO OS ODS?</h2>
+        <div>
+          <h2 class="section-title">O QUE SÃO OS ODS?</h2>
+        </div>
         <p class="section-paragraph">
           Os Objetivos de Desenvolvimento Sustentável (ODS) são um conjunto de metas globais estabelecidas pelas Nações Unidas em 2015 como parte da Agenda 2030 para o Desenvolvimento Sustentável. Esses objetivos representam um compromisso global para abordar uma série de desafios interligados que o mundo enfrenta, como a pobreza, a desigualdade, a degradação ambiental, a mudança climática, a paz e a justiça.
         </p>
