--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
       <header>
-        <h1 id="header-title">Maré de Sorte</h1>
+        <h1 id="header-title">MARÉ DE SORTE</h1>
         <img src="figs/wtr.png" alt="logo" width="10" height="12">
       </header>
       <nav>
-        <a href="index.html" title="Página Inicial" class="nav-links">Página Inicial</a> |
+        <a href="index.html" title="Página Inicial" class="nav-links">Página Inicial</a>
         <a href="form.html" title="Participar" class="nav-links">Participar</a> 
       </nav>
       <section>
