--- a/form.html
+++ b/form.html
@@ -12,7 +12,7 @@
         <img src="figs/wtr.png" alt="logo" width="10" height="12">
       </header>
       <nav>
-        <a href="index.html" title="Página Inicial" class="nav-links">Página Inicial</a> |
+        <a href="index.html" title="Página Inicial" class="nav-links">Página Inicial</a> 
         <a href="form.html" title="Participar" class="nav-links">Participar</a> 
       </nav>
       <form action="#" method="post" id="form">
