fixed unnecessary links

--- a/form.html
+++ b/form.html
@@ -13,7 +13,7 @@
       </header>
       <nav>
         <a href="index.html" title="Página Inicial" class="nav-links">Página Inicial</a> 
-        <a href="form.html" title="Participar" class="nav-links">Participar</a> 
+        <a href="#" title="Participar" class="nav-links">Participar</a> 
       </nav>
       <form action="#" method="post" id="form">
         <div>
