changes on html and css

--- a/form.html
+++ b/form.html
@@ -76,7 +76,7 @@
         </div>
 
         <div class="input-box">
-          <label for="share-why">Compartilhe por quê quer participar:</label><br>
+          <label for="share-why">Descreva a sua boa ação:</label><br>
           <textarea name="share-why" rows="10" cols="60"></textarea>
         </div>
 
