--- a/form.html
+++ b/form.html
@@ -31,7 +31,7 @@
           
           <div class="input-box">
             <label for="mail">E-mail:</label>
-            <input type="email" id="mail" class="text-field" name="mail" required/><br>
+            <input type="email" id="mail" class="text-field" name="mail" required/>
           </div>
           
           <div class="input-box">
