revised text and changes in spacing

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
               <li>Saúde e Bem-Estar: Assegurar uma vida saudável e promover o bem-estar para todas as idades.</li>
               <li>Educação de Qualidade: Garantir uma educação inclusiva, equitativa e de qualidade, promovendo oportunidades de aprendizado ao longo da vida.</li>
               <li>Igualdade de Gênero: Alcançar a igualdade de gênero e empoderar todas as mulheres e meninas.</li>
+              <li>Água Limpa e Saneamento: Assegurar a disponibilidade e a gestão sustentável da água e saneamento para todos.</li>
               <li>Energia Limpa e Acessível: Assegurar o acesso à energia acessível, confiável, sustentável e moderna para todos.</li>
               <li>Trabalho Decente e Crescimento Econômico: Promover o crescimento econômico sustentado, inclusivo e sustentável, emprego pleno e produtivo e trabalho decente para todos.</li>
               <li>Indústria, Inovação e Infraestrutura: Construir infraestrutura resiliente, promover a industrialização inclusiva e sustentável e fomentar a inovação.</li>
@@ -151,7 +152,7 @@
             <li><strong>Reduzir o Uso de Plásticos: </strong>Reduzir o uso de produtos plásticos de uso único, reciclar e participar de limpezas de praias para prevenir a poluição por plásticos nos oceanos.</li>
             <li><strong>Educação e Conscientização: </strong>Aprender sobre os desafios dos oceanos e compartilhar esse conhecimento com amigos e familiares ajuda a aumentar a conscientização.</li>
             <li><strong>Apoiar Organizações de Conservação: </strong>Contribuir financeiramente ou voluntariar-se para organizações que trabalham na conservação marinha é uma maneira eficaz de fazer a diferença.</li>
-            <li><strong>Práticas de Pesca Responsável:</strong>Se você é pescador, seguir práticas de pesca sustentável, respeitando os limites de captura e o tamanho mínimo dos peixes, é fundamental.</li>
+            <li><strong>Práticas de Pesca Responsável: </strong>Se você é pescador, seguir práticas de pesca sustentável, respeitando os limites de captura e o tamanho mínimo dos peixes, é fundamental.</li>
             <li><strong>Redução da Pegada de Carbono: </strong>Reduzir sua pegada de carbono através de escolhas de transporte sustentáveis e economia de energia também beneficia os oceanos, já que isso ajuda a combater a mudança climática.</li>
             <li><strong>Participação em Limpezas Costeiras: </strong>Junte-se a iniciativas de limpeza de praias e rios em sua comunidade para remover lixo e plásticos dos ambientes aquáticos.</li>
             <li><strong>Advogar por Políticas Sustentáveis: </strong>Envolver-se em atividades de advocacia e pressionar por políticas públicas que promovam a conservação marinha é uma maneira poderosa de fazer a diferença.</li>
@@ -181,10 +182,10 @@
           
           <h3>Por que Participar:</h3>
           <ul id="why-list">
-            <li><strong>Promover a Sustentabilidade: </strong>Optar por frutos do mar sustentáveis, certificados por organizações como o Marine Stewardship Council (MSC), ajuda a combater a sobrepesca.</li>
-            <li><strong>Reconhecimento: </strong>Reduzir o uso de produtos plásticos de uso único, reciclar e participar de limpezas de praias para prevenir a poluição por plásticos nos oceanos.</li>
-            <li><strong>Prêmios Exclusivos: </strong>Aprender sobre os desafios dos oceanos e compartilhar esse conhecimento com amigos e familiares ajuda a aumentar a conscientização.</li>
-            <li><strong>Comunidade Engajada: </strong>Aprender sobre os desafios dos oceanos e compartilhar esse conhecimento com amigos e familiares ajuda a aumentar a conscientização.</li>
+            <li><strong>Promover a Sustentabilidade: </strong>Contribuir para o ODS 14 é um ato crucial para a saúde de nosso planeta. Suas Boas Ações fazem a diferença, ajudando a proteger nossos oceanos e a vida marinha.</li>
+            <li><strong>Reconhecimento: </strong>Seu esforço não passará despercebido. Cada Boa Ação registrada é uma demonstração de comprometimento com um oceano mais saudável e sustentável.</li>
+            <li><strong>Prêmios Exclusivos: </strong>Além da satisfação de fazer o bem, você também tem a chance de ganhar prêmios incríveis oferecidos por nossos parceiros e patrocinadores.</li>
+            <li><strong>Comunidade Engajada: </strong>Junte-se a uma comunidade de pessoas que compartilham seu compromisso com a preservação dos oceanos, troque ideias e inspire-se em outras Boas Ações.</li>
           </ul>
           
           <p id="end-message">Seja parte da mudança e do futuro sustentável que queremos ver no mundo. Registre suas Boas Ações hoje e concorra a prêmios enquanto faz a diferença para os nossos oceanos. Juntos, podemos criar um impacto positivo duradouro.</p>
