--- a/form.html
+++ b/form.html
@@ -127,19 +127,24 @@
             <input type="text" id="neighborhood" name="neighborhood"/>
           </div>
           <button type="submit" form="form" value="Enviar" onclick="newElement()" class="addBtn">Enviar</button>
+
+          <div class="title-content">
+            <h2>Inscritos:</h2>
+          </div>
+          <table id="dataTable">
+            <thead>
+              <tr>
+                <th>Nome</th>
+                <th>Email</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr></tr>
+            </tbody>
+          </table>
         </form>
 
-        <table id="dataTable">
-          <caption>Inscritos:</caption>
-          <thead>
-            <tr>
-              <th>Nome</th>
-              <th>Email</th>
-            </tr>
-          </thead>
-          <tbody>
-          </tbody>
-        </table>
+
       </div>
       <footer>
         <p id="footer-text">
