--- a/form.html
+++ b/form.html
@@ -59,7 +59,7 @@
           
           <div class="input-box" >
             <label for="mail" id="mail">E-mail: <input type="email" id="mailInput" name="mail" required/></label>
-            <label for="CPF" id="CPF" >CPF: <input type="number" name="CPF" required style="width: 67%;"/></label>
+            <label for="CPF" id="CPF" >CPF: <input type="number" id="CPFInput" name="CPF" required style="width: 67%;"/></label>
           </div>
           
           <div class="input-box">
@@ -136,10 +136,10 @@
               <tr>
                 <th>Nome</th>
                 <th>Email</th>
+                <th id="delete-row"></th>
               </tr>
             </thead>
             <tbody>
-              <tr></tr>
             </tbody>
           </table>
         </form>
